Split the project into different sub-projects