@@ -1,8 +1,6 @@
 plugins {
     id("java")
-    // id("com.github.johnrengelman.shadow") version "8.1.1"
 }
-
 
 allprojects {
     apply {
@@ -10,7 +8,7 @@ allprojects {
     }
 
     group = "org.glavo"
-    version = "1.0-SNAPSHOT"
+    version = "0.1.0-SNAPSHOT"
 
     repositories {
         mavenCentral()
@@ -24,38 +22,27 @@ allprojects {
     tasks.test {
         useJUnitPlatform()
     }
+
+    tasks.compileJava {
+        // TODO: Java 8
+        sourceCompatibility = "9"
+        targetCompatibility = "9"
+    }
+
+    tasks.jar {
+        manifest {
+            attributes(
+                // In the early stages we isolate the configuration in the project directory
+                "JApp-Home" to rootProject.layout.projectDirectory.file(".japp").asFile.absolutePath
+            )
+        }
+    }
 }
 
-
-dependencies {
-    testImplementation("org.lz4:lz4-java:1.8.0")
-}
-
-tasks.compileJava {
-    // TODO: Java 8
-    sourceCompatibility = "9"
-    targetCompatibility = "9"
-
-    options.compilerArgs.addAll(
-        listOf(
-            "--add-exports=java.base/jdk.internal.loader=org.glavo.japp",
-            "--add-exports=java.base/jdk.internal.module=org.glavo.japp",
-        )
+tasks.create("buildAll") {
+    dependsOn(
+        ":boot:jar", ":launcher:shadowJar", ":packer:shadowJar"
     )
 }
 
-tasks.jar {
-    doLast {
-        tasks.jar.get().archiveFile.get().asFile.copyTo(
-            project.layout.buildDirectory.get().file("japp.jar").asFile,
-            overwrite = true
-        )
-    }
-
-    manifest {
-        attributes(
-            // In the early stages we isolate the configuration in the project directory
-            "JApp-Home" to project.layout.projectDirectory.file(".japp").asFile.absolutePath
-        )
-    }
-}
+defaultTasks("buildAll")
